# Woroxide

./: Cargo.toml  README.md  parse.jl
src/: lib.rs  main.rs
src/exam/: exam_api.rs  manual.rs  mod.rs
src/parser/: conv.rs  mod.rs  word.rs
word/: WordSmart2.csv  toefl.json  toeic_327.csv  word.json  word2.json  wordsmart.json
