[package]
name = "woroxide"
version = "0.2.0"
authors = ["axect <axect@outlook.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
serde_json = "1"
serde_derive = "1"
serde = "1"
cursive = "0.14"
num-rational = "0.2"
